--- a/src/@core/scss/base/core/menu/_navigation.scss
+++ b/src/@core/scss/base/core/menu/_navigation.scss
@@ -83,6 +83,7 @@
     height: $navbar-height;
     position: relative;
     padding: 0.35rem 1rem 0.3rem 1.64rem;
+    margin-bottom: 1rem;
     transition: 300ms ease all, background 0s;
     .navbar-brand {
       display: flex;
